added alias support
add commands that will be exeecuted as soon as a command runs

--- a/resources/translation.properties
+++ b/resources/translation.properties
@@ -41,6 +41,8 @@ command.param.name=name
 command.param.permission=permission
 command.param.setting=setting
 command.param.value=value
+command.param.consoleCommands=consoleCommands
+command.param.playerCommands=playerCommands
 error.command.multiple.times=Your using the same command multiple times\:
 error.commend.zero=every command need at least one command
 error.config.write.failed=Failed to write config
