keys now are working in messages

--- a/resources/translation.properties
+++ b/resources/translation.properties
@@ -43,6 +43,7 @@ command.param.setting=setting
 command.param.value=value
 command.param.consoleCommands=consoleCommands
 command.param.playerCommands=playerCommands
+command.param.otherPlayerPermission=otherPlayerPermission
 error.command.multiple.times=Your using the same command multiple times\:
 error.commend.zero=every command need at least one command
 error.config.write.failed=Failed to write config
@@ -50,3 +51,5 @@ error.no.connection.mcStats=failed to connect to mcStats
 error.no.custom.translation=no custom translation -> translation loaded from jar
 plugin.initialized=plugin initialized
 plugin.stopped=plugin stopped
+error.need.player=You need to be a player to execute this command
+command.param.player=Player
