added all player keys

--- a/resources/translation.properties
+++ b/resources/translation.properties
@@ -53,3 +53,4 @@ plugin.initialized=plugin initialized
 plugin.stopped=plugin stopped
 error.need.player=You need to be a player to execute this command
 command.param.player=Player
+error.data.missing=%s data missing.
