more server data keys
VERSION
MINECRAFT_VERSION
SPONGE_API_VERSION
DATE
TIME
TYPE

--- a/resources/translation.properties
+++ b/resources/translation.properties
@@ -54,3 +54,8 @@ plugin.stopped=plugin stopped
 error.need.player=You need to be a player to execute this command
 command.param.player=Player
 error.data.missing=%s data missing.
+format.date=dd.MM.yyyy
+format.time=HH\:mm\:ss
+format.vector3d=x\:%f y\:%f z\:%f
+true=true
+false=false
